# datex-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  example-config-client.dx  example-config-remote.dx  example-config-server.dx  example-config.dx  install.sh  renovate.json
.github/tools/: get-nightly-ref.ts  install-codesign.ts  nightly.ts
.github/workflows/: create-release.yml  deploy-example.yml  nighly.yml  nightly.yml  publish.yml  release.yml
src/: command_line_args.rs  main.rs  repl.rs
src/lsp/: mod.rs
src/utils/: config.rs
src/workbench/: mod.rs  workbench.rs
src/workbench/views/: comhub.rs  metadata.rs  mod.rs
