[package]
name = "datex_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
lazy_static = "1.4.0"
datex-core = { path = "./datex-core" }

serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
rustyline = "15.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
